# json-etl

./: README.md  pyproject.toml
data/: sales_data.csv  sales_data.parquet  sales_day01.json  sales_day02.json  sales_day03.json  sales_day04.json  sales_day05.json
src/: etl.py  pipeline.py
src/utils/: etl.py  log.py
test/: test.py
tests/: test.py
utils/: etl.py
